# raider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
include/: btree.h  raider.h  utils.h
src/: actions.c  btree.c  display.c  event_loop.c  ls.c  preview.c  preview_xwinsize.c  raider.c  utils.c
